Fix line-break issue that was causing display issues on mobile (thanks luma)

--- a/public/assets/stylesheets/rules.css
+++ b/public/assets/stylesheets/rules.css
@@ -15,6 +15,7 @@ tr:first-child, :last-child {
 }
 
 td {
+  word-break: break-word;
   padding: 1.2rem;
 }
 
